es-derive2-test/tests/ui/errors/awaited_set_on_struct.rs
// Error: AwaitedSet can only be used on enums
#[derive(es_derive2::AwaitedSet)]
pub struct NotAnEnum {
    pub data: String,
}

fn main() {}
